tests/invalid/import_inside_if/main.py
def main() -> None:
    if True:
        import imports.module_a
